--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react": "^16.9.53",
     "@types/react-dom": "^16.9.8",
     "@types/react-router-dom": "^5.1.7",
+    "@types/w3c-web-usb": "^1.0.4",
     "luxon": "^1.27.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
